# interface-shared-static-lib

./: .gitignore  CMakeLists.txt  main.cpp  oi.cpp  oi.hpp  tchau.cpp  tchau.hpp
